--- a/nodeBackend/.env
+++ b/nodeBackend/.env
@@ -1,1 +1,3 @@
-PORT = 8080
+DB_URI = mongodb+srv://Kishor:ai3TS3*LvBi5kTk@cluster0.3d8fr.mongodb.net/Test_DataBase?retryWrites=true&w=majority
+DB_NAME = Test_DataBase
+PORT = 5000
